tests/snapshots/r#mod__cluster_new_to_cluster_v2.snap
---
source: tests/mod.rs
expression: cluster_new_to_cluster_v2
---
+-------------+-------------+-------------+-------------+
|                        cluster                        |
+-------------+-------------+-------------+-------------+
|                     datacenter-1                      |
+-------------+-------------+-------------+-------------+
|  server-1   |  server-2   |  server-3   |  server-4   |
+-------------+-------------+-------------+-------------+
|  router-1   |  router-2   |  router-3   |  router-4   |
|  8081/3031  |  8081/3031  |  8081/3031  |  8081/3031  |
+-------------+-------------+-------------+-------------+
| storage-1-1 | storage-1-2 | storage-1-3 | storage-1-4 |
| 8082/3032   | 8082/3032   | 8082/3032   | 8082/3032   |
+-------------+-------------+-------------+-------------+
| storage-2-1 | storage-2-2 | storage-2-3 | storage-2-4 |
| 8083/3033   | 8083/3033   | 8083/3033   | 8083/3033   |
+-------------+-------------+-------------+-------------+

---
all:
  vars:
    ansible_user: vagrant
    ansible_password: vagrant
    cartridge_app_name: new-app
    cartridge_cluster_cookie: myapp-cookie
    cartridge_package_path: /tmp/myapp.rpm
    cartridge_bootstrap_vshard: true
    cartridge_failover_params:
      mode: stateful
      state_provider: etcd2
      etcd2_params:
        prefix: some/prefix
        lock_delay: 30
        endpoints:
          - "http://192.168.16.11:2379"
          - "http://192.168.16.12:2379"
          - "http://192.168.16.13:2379"
  hosts:
    router-1:
      config:
        advertise_uri: "192.168.16.11:3031"
        http_port: 8081
    storage-1-1:
      config:
        advertise_uri: "192.168.16.11:3032"
        http_port: 8082
        METRICS_PATH: /health/metrics
    storage-2-1:
      config:
        advertise_uri: "192.168.16.11:3033"
        http_port: 8083
        METRICS_PATH: /health/metrics
    router-2:
      config:
        advertise_uri: "192.168.16.12:3031"
        http_port: 8081
    storage-1-2:
      config:
        advertise_uri: "192.168.16.12:3032"
        http_port: 8082
        METRICS_PATH: /health/metrics
    storage-2-2:
      config:
        advertise_uri: "192.168.16.12:3033"
        http_port: 8083
        METRICS_PATH: /health/metrics
    router-3:
      config:
        advertise_uri: "192.168.16.13:3031"
        http_port: 8081
    storage-1-3:
      config:
        advertise_uri: "192.168.16.13:3032"
        http_port: 8082
        METRICS_PATH: /health/metrics
    storage-2-3:
      config:
        advertise_uri: "192.168.16.13:3033"
        http_port: 8083
        METRICS_PATH: /health/metrics
    router-4:
      config:
        advertise_uri: "192.168.16.14:3031"
        http_port: 8081
    storage-1-4:
      config:
        advertise_uri: "192.168.16.14:3032"
        http_port: 8082
        METRICS_PATH: /health/metrics
    storage-2-4:
      config:
        advertise_uri: "192.168.16.14:3033"
        http_port: 8083
        METRICS_PATH: /health/metrics
  children:
    router-1-replicaset:
      vars:
        replicaset_alias: router-1
        failover_priority:
          - router-1
        roles:
          - router
          - failover-coordinator
      hosts:
        router-1: ~
    storage-1-replicaset:
      vars:
        replicaset_alias: storage-1
        failover_priority:
          - storage-1-1
          - storage-1-2
          - storage-1-3
          - storage-1-4
        roles:
          - storage
      hosts:
        storage-1-1: ~
        storage-1-2: ~
        storage-1-3: ~
        storage-1-4: ~
    storage-2-replicaset:
      vars:
        replicaset_alias: storage-2
        failover_priority:
          - storage-2-1
          - storage-2-2
          - storage-2-3
          - storage-2-4
        roles:
          - storage
      hosts:
        storage-2-1: ~
        storage-2-2: ~
        storage-2-3: ~
        storage-2-4: ~
    router-2-replicaset:
      vars:
        replicaset_alias: router-2
        failover_priority:
          - router-2
        roles:
          - router
          - failover-coordinator
      hosts:
        router-2: ~
    router-3-replicaset:
      vars:
        replicaset_alias: router-3
        failover_priority:
          - router-3
        roles:
          - router
          - failover-coordinator
      hosts:
        router-3: ~
    router-4-replicaset:
      vars:
        replicaset_alias: router-4
        failover_priority:
          - router-4
        roles:
          - router
          - failover-coordinator
      hosts:
        router-4: ~
    server-1:
      vars:
        ansible_host: 192.168.16.11
      hosts:
        router-1: ~
        storage-1-1: ~
        storage-2-1: ~
    server-2:
      vars:
        ansible_host: 192.168.16.12
      hosts:
        router-2: ~
        storage-1-2: ~
        storage-2-2: ~
    server-3:
      vars:
        ansible_host: 192.168.16.13
      hosts:
        router-3: ~
        storage-1-3: ~
        storage-2-3: ~
    server-4:
      vars:
        ansible_host: 192.168.16.14
      hosts:
        router-4: ~
        storage-1-4: ~
        storage-2-4: ~

